# obs-studio

.github/actions/windows-patches/: action.yaml
.github/workflows/: flatpak.yml  main.yml  publish.yaml  pull-request-format.yml  push.yaml
CI/: check-services.py
UI/: absolute-slider.hpp  obs-app.cpp  properties-view-idian.cpp  properties-view.cpp  properties-view.hpp  volume-control.cpp  window-basic-filters.cpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-settings.cpp  window-basic-vcam-config.cpp  window-projector.cpp
UI/cmake/: ui-elements.cmake
UI/forms/: OBSBasic.ui  OBSBasicVCamConfig.ui  OBSLogViewer.ui
UI/frontend-plugins/frontend-tools/: CMakeLists.txt  scripts.cpp
docs/sphinx/: reference-properties.rst
frontend/: OBSApp.cpp  OBSStudioAPI.cpp
frontend/cmake/: ui-dialogs.cmake  ui-qt.cmake  ui-utility.cmake
frontend/components/: OBSAdvAudioCtrl.cpp  SourceTreeItem.cpp  VisibilityItemWidget.cpp
frontend/data/locale/: en-US.ini
frontend/data/themes/: System.obt  Yami.obt  Yami_Light.ovt
frontend/dialogs/: NameDialog.cpp  NameDialog.hpp  OBSBasicFilters.cpp  OBSBasicProperties.cpp  OBSBasicProperties.hpp  OBSBasicSourceSelect.cpp  OBSIdianPlayground.cpp  OBSSceneCollections.cpp  OBSSceneCollections.hpp  OBSYoutubeActions.cpp
frontend/forms/: OBSBasic.ui  OBSSceneCollections.ui  obs.qrc
frontend/importer/: ImporterEntryPathItemDelegate.cpp
frontend/models/: SceneCollection.cpp  SceneCollection.hpp
frontend/settings/: OBSBasicSettings.cpp  OBSBasicSettings_Stream.cpp  OBSHotkeyWidget.cpp
frontend/utility/: DoubleClickEventFilter.cpp  DoubleClickEventFilter.hpp  GoLiveAPI_Network.cpp  MissingFilesPathItemDelegate.cpp  OBSProxyStyle.cpp  OBSProxyStyle.hpp  RemuxEntryPathItemDelegate.cpp
frontend/widgets/: OBSBasic.cpp  OBSBasic.hpp  OBSBasicStats.cpp  OBSBasic_Docks.cpp  OBSBasic_Dropfiles.cpp  OBSBasic_MainControls.cpp  OBSBasic_Preview.cpp  OBSBasic_Profiles.cpp  OBSBasic_SceneCollections.cpp  OBSBasic_SceneItems.cpp  OBSBasic_Scenes.cpp  OBSBasic_StudioMode.cpp  OBSBasic_Transitions.cpp  OBSBasic_Updater.cpp  OBSProjector.cpp  OBSQTDisplay.cpp
frontend/wizards/: AutoConfigStreamPage.cpp
libobs/: CMakeLists.txt
plugins/mac-virtualcam/src/camera-extension/: OBSCameraDeviceSource.swift
plugins/mac-virtualcam/src/obs-plugin/: plugin-main.mm
shared/properties-view/: CMakeLists.txt  double-slider.hpp  properties-view.cpp  properties-view.hpp
shared/properties-view-idian/: CMakeLists.txt  PropertiesView.cpp  PropertiesView.hpp  PropertiesView_Property.cpp  PropertiesView_Property_List.cpp
shared/qt/idian/: CMakeLists.txt  OBSComboBox.cpp
shared/qt/idian/components/: CheckBox.cpp  CheckBox.hpp  ComboBox.cpp  ComboBox.hpp  DoubleSpinBox.cpp  SpinBox.cpp  ToggleSwitch.cpp  ToggleSwitch.hpp
shared/qt/idian/include/: Idian.hpp  obs-widgets.hpp
shared/qt/idian/include/Idian/: Row.hpp
shared/qt/idian/widgets/: Group.cpp  Group.hpp  PropertiesList.cpp  PropertiesList.hpp  Row.cpp  Row.hpp
shared/qt/widgets/: CMakeLists.txt
